# backend-rust-system-design

./: BCDEF  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
.devcontainer/: devcontainer.json
nginx/: nginx.conf
src/: main.rs
